# mupdf_api_for_ffi

./: .gitignore  CMakeLists.txt  README.md  main.c  mupdf_api.c  mupdf_api.h
test/: CMakeLists.txt  test.c
test/include/: mupdf_api.h
